[package]
name = "bevy-bencher"
edition = "2021"
publish = false

[dev-dependencies]
# Benchmarking library.
criterion = "0.5.1"

# Seedable PRNG
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

# Bevy, on the latest commit.
bevy = { git = "https://github.com/bevyengine/bevy.git" }

[[bench]]
name = "main"
harness = false
