[package]
name = "bevy-bencher"
edition = "2021"
publish = false
autobenches = false

[dev-dependencies]
bevy.workspace = true

# Benchmarking library.
criterion = "0.5.1"

# Seedable PRNG
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

[[bench]]
name = "main"
harness = false

[workspace]
members = ["file-size"]

[workspace.dependencies]
# Bevy, on the latest commit.
bevy = { git = "https://github.com/bevyengine/bevy.git" }

[profile.file-size]
inherits = "release"
# Fast link time optimizations.
lto = "thin"
# Strip debuginfo and symbols from binary.
strip = true
